# infinity-scrape

./: .gitignore  howtoget.py  infinite-craft.db  pyproject.toml  scrape.py
